complete 06 part IV

--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
+<!-- this declarations tell the browser what version of html the page is written in. Notably, this is the valid declaration for HTML 5. Self-closing. (see w3schools). -->
 <html lang="en">
-
+<!-- this declaration defines what language the non-editable elements are written in, and also the language the user should use in the editable elements. Self-closing. (see MDN). -->
     <head>
+    <!-- this element contains machine-readable metadata, that is, information that is not displayed in the browser, including things such as the overall page title, links to css stylesheets and specifying the document's character coding. It must be the first child element of the html parent element. (see MDN) -->
         <meta charset="utf-8" />
+        <!-- this, uh, specifies the document's character coding -->
         <meta name="author" content="DepecheCode">
+        <!-- this specifies the author of this page -->
         <meta name="description" content="This website is just an exercise to pracice the basic html structure" />
+        <!-- this describes the document, something which can help make your page appear higher in relevant searches by search engines. (see MDN) -->
         <title>Basic Structure Practice</title>
+        <!-- In contrast to headings, this title defines the name of the overall document. (see MDN) -->
     </head>
 
     <body>
+        <!-- this is where the content of the page is stored. It must be the second child element of the html parent element. There can only be one <body> element. (see MDN) -->
         <h1 title="&lt;h1&gt;">This is the most important heading</h1>
-
+        <!-- html <h1> to <h6> six levels of section headings, from highest <h1> to lowest <h6>. Both starting and ending tags are mandatory. For the sake of accessibility, it is not advised to use these tags to change font-size or to skip progressive levels or to repeat use of the <h1> tag. (see MDN)-->
         <h2 title="&lt;h2&gt;">This heading is a little less important</h2>
 
         <h3 title="&lt;h3&gt;">This heading is even less important than the one above</h3>
