--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
         <!-- this is where the content of the page is stored. It must be the second child element of the html parent element. There can only be one <body> element. (see MDN) -->
         <h1 title="&lt;h1&gt;">This is the most important heading</h1>
         <!-- html <h1> to <h6> six levels of section headings, from highest <h1> to lowest <h6>. Both starting and ending tags are mandatory. For the sake of accessibility, it is not advised to use these tags to change font-size or to skip progressive levels or to repeat use of the <h1> tag. (see MDN)-->
+            <p>Lorem, ipsum dolor.</p>
+            <!-- this element represents a paragraph, which in HTML can be not only blocks of text, but any grouping of related content including images or form fields (see MDN). -->
         <h2 title="&lt;h2&gt;">This heading is a little less important</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, libero.</p>
+            <!-- note that lorem<integer> gives you lorem ipsum text of <integer> word length -->
 
         <h3 title="&lt;h3&gt;">This heading is even less important than the one above</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos eum voluptatem repellat cumque aliquam quos sapiente? Sed repellat corporis at omnis iure architecto? Quod, illo.</p>
     </body>
 
 </html>
